apps/nodejs-demo/deployment-ss.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-demo-ss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-demo-ss
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodejs-demo-ss
    spec:
      serviceAccount: default
      containers:
        - image: quay.io/spiro-redhat/node.js:19@sha256:4e7e9ec74254d11389171398c56a11148661c15e497d7599df5faee07ec49cb2
          name: nodejs-demo-ss
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits: 
              memory: "64Mi"
              cpu: "250m"
          ports:
            - containerPort: 8080
              name: web
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 2
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
