apps/nodejs-demo/route.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-demo
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: nodejs-demo
  type: LoadBalancer
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nodejs-demo
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: nodejs-demo
